src/Page/HomePage/style.css
.card-text.section-para.card-dic {
  text-align: left;
}
.centered-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 160px; 
  background-color: #FBDFD9;
}
 .bg-color{
  height: 529px;
  background-color: #F7F7F7;
 }
.bannerimg1{
  height: 96px;
  width: 100%;
  margin-left: 32px;
  margin-right: 32px;
}
.bannerimg2 {
  height: 64px;
  width: 100%;
  margin-right: 32px;
}
.btn{
  margin-right: 32px;
}

.home-page-bg {
  background: url("./assets/bg.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: top center;
  width: 100%;
  height: 800px;
 
  
}
.image-background {
  background-image: url('./assets/student.jpg'); 
  background-size: cover; 
  background-position: center; 
  height: 680px; 
  position: relative; 
  border-radius: 32px 0 0 32px;
}

.centered-play-icon {
  position: absolute; 
  top: 50%;
  left: 50%; 
  transform: translate(-50%, -50%); 
  border-radius: 50%;
  padding: 10px;
  cursor: pointer; 
}
.image-button {
  border: none;
  background: transparent; 
  cursor: pointer; 
  outline: none; 
}

.image-button:focus {
  outline: 2px solid #007bff; 
}

.play-icon-image {
  width: 112.5px;
  height:112.5px; 
  transition: transform 0.3s ease; 
}

.image-button:hover .play-icon-image {
  transform: scale(1.1); 
}


.mar-3 {
  margin-top: 32px;
}
.mar-bot {
  margin-bottom: 32px;
}


.BgColor{
  background-color:var(--primary) ;
  color:white
  
}
.our-partners,
.home-page-supporters
{
  margin-top: 40px;
}
.home-image{
  width: 100%;
  height: 100%;
  padding: 0px ,0px;
  border-radius: 32px 0 0 32px;
}
.home-page-hero-section-data {
  line-height: 1.3;
  max-width: 570px;
  color: #ffffff;
  margin-top: 10%;
}
.home-page-hero-section-data-p {
  max-width: 570px;
  line-height: 28px;
}
.font{
  line-height: 30.6px;
}

.Initiatives-bg-color {
  background: linear-gradient(
    180deg,
    rgba(0, 0, 0, 0) 0%,
    rgba(0, 0, 0, 0.159) 52.6%,
    rgba(0, 0, 0, 0.8) 100%
  );
  height: 330px;
  border-radius: 15px;
}
.our-initiatives {
  transition: none; 
}
.our-initiatives  {
   filter: none;
  border: none; 
 
}
.our-initiatives .textlink:hover a:hover {
  text-decoration: none;
}


.textlink {
  border-radius: 8px; 
  overflow: hidden; 
  transition: none; 
}

.our-initiatives .card-image {
  transition: box-shadow 0.3s ease; 
}

.fixed-dimensions {
  width: 154px;
  height: 48px;
}

.software-development-img {
  background: url("./assets/bg\ \(1\).png");
  background-repeat: no-repeat;
  margin-top: 85px;
}
.external-link-icon {
  margin-bottom: 1.8rem;
  font-size: 1.5rem;
}


.heading-line{
  line-height: 1.3!important;
 
}
.para-line{
  line-height: 1.5!important;
}


.impact .count {
  font-size: 72px !important;
  color: rgba(240, 95, 64, 1);
  margin: 8px;
  font-family: Lusitana;
  font-style: normal;
  font-weight: 600;
}
.impactellipse {
  margin-top: 45px;
}

.impact {
  background-image: url("./assets/backgroundImg.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.partner {
  background-color: rgba(240, 95, 64, 1) !important;
}
.our-partner-btn {
  width: 352px;
}

.media-scroll-section {
  
  padding-inline: 15%;
 
  
}
.supporters {
  padding: 70px;
}
.supporters-link {
  cursor: pointer;
  height: fit-content;
  width: fit-content;
}
.supporters-link img {
  width: 150px;
  height: 100%;
}

.para-item{
  text-align: left;
  margin:15px 150px;
  font-style: Light;
  font-weight: 300;
}

.media-scroll-section .row {
  display: flex;
  flex-wrap: nowrap;
}

.media-scroll-section .col-lg-3,
.media-scroll-section .col-md-4,
.media-scroll-section .col-sm-6 {
  display: flex;
  flex-direction: column;

}

@media screen and (max-width: 1237px) {
  .our-partners {
    margin-inline: 20px !important;
  }
  .para-item{
    margin:0px;
  }
  .home-image{
    height: 100%;
  }
  
  .btn{
    margin-right: 0px;
  }

}

@media (max-width: 576px) {

  .para-item{
    margin:0px;
  }
  .home-page-hero-section-data {
    max-width: 600px;
    font-size: 24px;
    margin-top: 10%;
  }

  .our-initiatives .container,
  .initiative-card-parent,
  .rgba-black-strong .container {
    padding: 0;
  }
  .impact .count {
    font-size: 3rem !important;
  }
  .impactellipse {
    display: none;
  }
  .software-development-img {
    background-image: none;
  }
  .software-development-img {
    margin-top: 0;
  }
  .homepage-hero-data {
    padding: 0;
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
  }
  .home-page-hero-btns button {
    width: 156px;
  }
  .initiative-card {
    width: 100%;
    max-height: 220px;
  }
  .Initiatives-bg-color {
    width: 100%;
    max-height: 220px;
  }
  .home-page-bg,
  .rgba-black-strong {
    height: 360px !important;
  }
  .home-page-bg h2 {
    font-size: 1.5rem !important;
  }
  .navgurukul-homepage .container {
    width: 90% !important;
  }
  .media-scroll-section .row {
    flex-wrap: wrap; 
  }
  .media-scroll-section .col-sm-6 {
    width: 100%; 
  }

  .btn{
    margin-right: 0px;
  }
}
.card-image {
  width: 100%; 
  height: 320px; 
  border-radius: 8px; 
  object-fit: cover;
}

.textlink {
  border-radius: 8px; 
  overflow: hidden; 
  transition: none; 
}

.our-initiatives .card-image {
  transition: box-shadow 0.3s ease; 
}
.card-image:hover {
  filter: drop-shadow(0px 16px 24px rgba(4, 4, 4, 0.06))
      drop-shadow(0px 6px 30px rgba(7, 7, 7, 0.04))
      drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.08));
    border: 2px solid transparent;
}

.card-body {
  margin: 0px;
  padding: 0px;
  background-color: white; 
  color: #000; 
}

@media screen and (max-width: 320px) {
  .home-page-hero-btns button {
    width: 100px;
  }
  .our-partner-btn {
    width: 250px;
  }
  .home-page-hero-section-data-p {
    margin-block: 0;
  }
  .para-item{
    margin:0px;
  }
  .btn{
    margin-right: 0px;
  }
 
}
.logo-img {
  width: auto;
}

.custom-bg-image {
  position: relative;
  width: 100%;
  height: 620px; 
  background-image: url("./assets/background-img1.png");
  background-color: transparent; 
  background-size: cover;
  background-position: center;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 32px;
  opacity: 1;
  border-radius: 32px 0px 32px 0px;
}

.custom-video-container {
  width: 100%;
  height: 580px;
}

.bg-video {
  width: 100%;
  height: 580px;
  border-radius: 32px 0px 32px 0px;
}
.play-button {
  width: 80px; 
  height: 80px; 
  position: absolute; 
  top: 50%; 
  left: 50%; 
  transform: translate(-50%, -50%); 
  cursor: pointer; 
}

.play-button:hover {
  filter: blur(0.5px); 
  transform: translate(-50%, -50%) scale(1.02); 
}


@media (max-width: 576px) {
  .play-button {
    width: 50px; 
    height: 50px; 
  
  }
  .bg-video {
    margin-top: 10px;
    height: 250px;
  }
   .custom-video-container {
    max-height: 250px; 
  }
  
  .custom-bg-image {
  
    height: 250px;
  }
  



@media (max-width: 767px) {
  .heading-line {
    text-align: left !important;
    font-size: 1.5rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .heading-line .text-primary {
    color: #f2543f;
    font-weight: bold;
    text-align: left;
  
  }

  .heading-line .BgColor {
    background-color: #f2543f;
    color: #fff;
    font-weight: bold;
    margin: 10px 0;
    display: inline-block;
    margin-left: 37px; 
  }

  .heading-line span.d-inline.d-md-block {
    margin-left: 54px; 
  }

  .font.body1 {
    text-align: left;
    font-size: 1rem;
    margin-top: 10px;
  }
}




}

